# isometric-game

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.C164B07066F489E3.idx
src/: main  main.c
